<resources>
    <string name="app_name">NameQuiz</string>
    <string name="Start_Quiz">Start Quiz</string>
    <string name="add">Add</string>
    <string name="database">Database</string>
    <string name="add_person">Add person</string>
    <string name="her_kan_du_legge_til_personer">Her kan du legge til personer</string>
    <string name="name">Name</string>
    <string name="jon">Jon</string>
    <string name="her_er_quizzen">Her er Quizzen</string>
    <string name="her_er_databasen">Her er databasen</string>
    <string name="capture_image">Capture Image</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="add_a_new_person">Add a new person</string>
    <string name="delete_btn">delBtn</string>
    <string name="personimage">personImage</string>
    <string name="type_a_name">type_a_name</string>
    <string name="next">next</string>
    <string name="home">home</string>
</resources>