<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="36dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:text="@string/her_kan_du_legge_til_personer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName" />

    <ImageView
        android:layout_weight="1"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/todo" />

    <Button
        android:text="@string/capture_image"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@color/design_default_color_primary"
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:text="@string/add_person" />


</LinearLayout>